fixed the text wrapping

--- a/src/components/ciConfig/CIConfig.scss
+++ b/src/components/ciConfig/CIConfig.scss
@@ -67,6 +67,7 @@
                     display: inline-block;
                     background-size: contain;
                     margin-right: 4px;
+                    white-space: nowrap;
                 }
             }
         }
